New deployment routine and Gremlin console were introduced.