@@ -46,10 +46,10 @@ GOTO parse
 :endparse
 
 :: workaround for https://issues.apache.org/jira/browse/GROOVY-6453
-set JAVA_OPTIONS=-Xms32m -Xmx512m -Djline.terminal=none
+set JAVA_OPTIONS=-Xms32m -Xmx512m --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED --add-opens=java.base/sun.security.x509=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED -Djline.terminal=none
 
 :: Launch the application
 
-java %JAVA_OPTIONS% %JAVA_ARGS% -cp "%LIBDIR%\*;%EXTDIR%;" "-Dlog4j.configurationFile=conf/log4j.xml" "-Dytdb.log4j.level=%YTDB_LOG_LEVEL%" org.apache.tinkerpop.gremlin.console.Console %*
+java %JAVA_OPTIONS% %JAVA_ARGS% -cp "%LIBDIR%\*;%EXTDIR%;" "-Dlog4j2.configurationFile=conf/log4j2.xml" "-Dytdb.log4j.level=%YTDB_LOG_LEVEL%" org.apache.tinkerpop.gremlin.console.Console %*
 
 set CLASSPATH=%OLD_CLASSPATH%
